<resources>
    <string name="app_name">ProjectNhom12</string>
    <string name="btnTuVanTructuyen">Tư vấn trực tuyến</string>
    <string name="txtTenBacSi">Tên bác sĩ</string>
    <string name="btnXemThongTin">Xem thông tin</string>
    <string name="txtBacSiTen">Bác sĩ tên</string>
    <string name="txtLienHe">Liên hệ</string>
    <string name="btnChatNgay">Chat ngay</string>
    <string name="txtBacSi">Bác Sĩ</string>
    <string name="btnTraCuuTrieuChung">Tra Cứu Triệu Chứng</string>
    <string name="btnTimBenhVien">Tìm Bệnh Viện</string>
    <string name="txtDangNhap">Đăng nhập</string>
    <string name="rdbDoctor">Doctor</string>
    <string name="rdbKhachHang">Khách hàng</string>
    <string name="txtUser">User</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogIn">LogIn</string>
    <string name="btnRegister">Đăng ký</string>
    <string name="edtTrieuChung">Triệu chứng</string>
    <string name="btnSearch">Search</string>
    <string name="txtRegister">Đăng ký</string>
    <string name="btnHuy">Hủy</string>
    <string name="edtBenhVien">Bệnh Viện</string>
    <string name="btnLogOut">LogOut</string>




</resources>